Fixing Menu Alignment

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -266,7 +266,8 @@ p {
   display: none; }
 
 .menu ul {
-  display: inline-block; }
+  display: inline-block;
+  float: right; }
 
 .menu li {
   margin: 0px 50px 0px 0px;
