--- a/app/scss/partials/_nav.scss
+++ b/app/scss/partials/_nav.scss
@@ -4,6 +4,7 @@
   
 .menu ul {
     display:inline-block;
+    float:right;
 }
  
 .menu li {
